--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
         <artifactId>maven-jar-plugin</artifactId>
         <version>${maven.compiler.plugin.version}</version>
         <configuration>
+          <archive>
+          <manifest>
+            <mainClass>com.mypackage.MyClass</mainClass>
+          </manifest>
+        </archive>
           <source>${jdk.version}</source>
           <target>${jdk.version}</target>
         </configuration>
